unpackaged/main/default/objects/BLND_DFCS_Carousel__c/BLND_DFCS_Carousel__c.object-meta.xml
<CustomObject>
	<label>Carousel</label>
	<nameField>
		<label>Carousel Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Carousels</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>