unpackaged/main/default/objects/BLND_DFCS_Carousel__c/fields/BLND_Data__c.field-meta.xml
<CustomField>
	<fullName>BLND_Data__c</fullName>
	<label>Data</label>
	<length>32000</length>
	<type>LongTextArea</type>
</CustomField>