unpackaged/main/default/objects/BLND_DFCS_Carousel__c/fields/BLND_Description__c.field-meta.xml
<CustomField>
	<fullName>BLND_Description__c</fullName>
	<label>Description</label>
	<type>TextArea</type>
</CustomField>