unpackaged/main/default/objects/BLND_DFCS_Carousel__c/fields/BLND_Expansion__c.field-meta.xml
<CustomField>
	<fullName>BLND_Expansion__c</fullName>
	<label>Expansion</label>
	<length>32000</length>
	<type>LongTextArea</type>
</CustomField>