unpackaged/main/default/objects/BLND_DFCS_Carousel__c/fields/BLND_Height__c.field-meta.xml
<CustomField>
	<fullName>BLND_Height__c</fullName>
	<label>Height</label>
	<precision>10</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>