unpackaged/main/default/objects/BLND_DFCS_Carousel__c/fields/BLND_Lastopen__c.field-meta.xml
<CustomField>
	<fullName>BLND_Lastopen__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Lastopen</label>
	<referenceTo>BLND_DFCS_Slide__c</referenceTo>
	<relationshipLabel>Carousels (Lastopen)</relationshipLabel>
	<relationshipName>Carousels1</relationshipName>
	<type>Lookup</type>
</CustomField>