unpackaged/main/default/objects/BLND_DFCS_Carousel__c/fields/BLND_Over2__c.field-meta.xml
<CustomField>
	<fullName>BLND_Over2__c</fullName>
	<label>Over2</label>
	<length>32000</length>
	<type>LongTextArea</type>
</CustomField>