unpackaged/main/default/objects/BLND_DFCS_Carousel__c/fields/BLND_Private__c.field-meta.xml
<CustomField>
	<fullName>BLND_Private__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Private</label>
	<type>Checkbox</type>
</CustomField>