unpackaged/main/default/objects/BLND_DFCS_Carousel__c/fields/BLND_Type__c.field-meta.xml
<CustomField>
	<fullName>BLND_Type__c</fullName>
	<label>Type</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Presentation</fullName>
				<default>true</default>
				<label>Presentation</label>
			</value>
			<value>
				<fullName>Notebook</fullName>
			</value>
			<value>
				<fullName>Address Book</fullName>
			</value>
			<value>
				<fullName>Dashboard</fullName>
			</value>
			<value>
				<fullName>To Do List</fullName>
			</value>
			<value>
				<fullName>Report</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>